@@ -13,3 +13,4 @@ EXPORTS
 	udefrag_get_default_formatted_results
 	udefrag_release_default_formatted_results
 	udefrag_get_error_description
+	udefrag_set_log_file_path
