@@ -21,6 +21,7 @@ HISTORY
       winx_path_remove_extension, winx_path_extract_filename, winx_create_path,
       winx_init_spin_lock, winx_acquire_spin_lock, winx_release_spin_lock,
       winx_destroy_spin_lock functions added to zenwinx library
+    - udefrag_set_log_file_path function added to udefrag library
 
     beta1:
     - defragmentation algorithm reimplemented; partial defragmentation improved
